k8s/dep.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mynginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 5 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nfs-volume
          nfs:
            server: 10.254.0.9
            path: /mnt/share

      containers:
        - name: nginx
          image: levess007/nginx:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: "/var/www"
              name: nfs-volume
