k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
    - name: nginx
      image: levess007/nginx:latest
      imagePullPolicy: Never
      ports:
      - containerPort: 80
