k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service
spec:
  type: LoadBalancer
  externalIPs:
  - 10.254.0.9
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
